# passkit-app

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
passkit_cli/: cli.py  config.py
passkit_cli/coupons/: __init__.py  create_campaign.py  create_coupon.py  create_offer.py  list_coupons.py  redeem_coupon.py  update_coupon.py  void_coupon.py
passkit_cli/membership/: __init__.py  burn_points.py  check_in_member.py  check_out_member.py  create_program.py  create_tier.py  delete_member.py  earn_points.py  enrol_member.py  update_member.py
passkit_cli/shared/: __init__.py  grpc_connection.py  grpc_connection_pooling.py  resend_welcome_email.py
tests/: test_cli.py  test_config.py
